removed hard coded username

--- a/home/dot-config/waybar/config.jsonc
+++ b/home/dot-config/waybar/config.jsonc
@@ -30,7 +30,7 @@
     ],
 
     "image#logo": {
-        "path": "/home/ash/.config/waybar/1981Logo.svg",
+        "exec": "~/.config/waybar/logo_path.sh",
         "size": 48
     },
 
